--- a/MorriganHall 5.2/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/MorriganHall 5.2/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -171,13 +171,14 @@ None=======
 CurrentPosGridSize=0
 SnapScaleEnabled=False
 CurrentRotGridSize=4
-CurrentRotGridSize=0
+CurrentRotGridSize=6
 CurrentScalingGridSize=4
 GridEnabled=False
+RotGridEnabled=False
 
 [MRU]
-MRUItem0=/Game/Attic
-MRUItem1=/Game/Living_Room
+MRUItem0=/Game/Living_Room
+MRUItem1=/Game/Attic
 MRUItem2=/Game/stairwellblock3
 MRUItem3=/Game/abandonedroom_V2
 MRUItem4=/Game/stairwellblock3_2
@@ -198,7 +199,7 @@ StaticMeshActor=SceneCaptureCube.SceneCapture.General Show Flags,SceneCaptureCub
 StaticMeshActor=SceneCaptureCube.SceneCapture.General Show Flags,SceneCaptureCube.SceneCapture.Advanced Show Flags,SceneCaptureCube.SceneCapture.Lighting Features Show Flags,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,CineCameraActor.PostProcess.Lens,PostProcessVolume.Lens.Lens
 StaticMeshActor=SceneCaptureCube.SceneCapture.General Show Flags,SceneCaptureCube.SceneCapture.Advanced Show Flags,SceneCaptureCube.SceneCapture.Lighting Features Show Flags,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Materials.MaterialList,CineCameraActor.PostProcess.Lens,PostProcessVolume.Lens.Lens
 StaticMeshActor=SceneCaptureCube.SceneCapture.General Show Flags,SceneCaptureCube.SceneCapture.Advanced Show Flags,SceneCaptureCube.SceneCapture.Lighting Features Show Flags,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Materials.MaterialList,CineCameraActor.PostProcess.Lens,CineCameraActor.PostProcess.Rendering Features,PostProcessVolume.Lens.Lens
-StaticMeshActor=SceneCaptureCube.SceneCapture.General Show Flags,SceneCaptureCube.SceneCapture.Advanced Show Flags,SceneCaptureCube.SceneCapture.Lighting Features Show Flags,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Materials.MaterialList,CineCameraActor.PostProcess.Lens,CineCameraActor.PostProcess.Rendering Features,PostProcessVolume.Lens.Lens,PostProcessVolume.Lens.Lens|Exposure,PostProcessVolume.Color Grading.Color Grading
+StaticMeshActor=SceneCaptureCube.SceneCapture.General Show Flags,SceneCaptureCube.SceneCapture.Advanced Show Flags,SceneCaptureCube.SceneCapture.Lighting Features Show Flags,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Materials.MaterialList,CineCameraActor.PostProcess.Lens,CineCameraActor.PostProcess.Rendering Features,PostProcessVolume.Lens.Lens
 None=======
 None=======
 None=======
@@ -242,7 +243,7 @@ PostProcessVolume=PostProcessVolume.Lens.Lens,PostProcessVolume.Lens.Lens
 PostProcessVolume=PostProcessVolume.Lens.Lens,PostProcessVolume.Lens.Lens
 PostProcessVolume=PostProcessVolume.Lens.Lens,PostProcessVolume.Lens.Lens
 PostProcessVolume=PostProcessVolume.Lens.Lens,PostProcessVolume.Lens.Lens
-PostProcessVolume=PostProcessVolume.Lens.Lens,PostProcessVolume.Lens.Lens|Exposure,PostProcessVolume.Color Grading.Color Grading,SceneCaptureCube.SceneCapture.General Show Flags,SceneCaptureCube.SceneCapture.Advanced Show Flags,SceneCaptureCube.SceneCapture.Lighting Features Show Flags,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Materials.MaterialList,CineCameraActor.PostProcess.Lens,CineCameraActor.PostProcess.Rendering Features
+PostProcessVolume=PostProcessVolume.Lens.Lens,PostProcessVolume.Lens.Lens
 BrushComponent=SceneCaptureCube.SceneCapture.General Show Flags,SceneCaptureCube.SceneCapture.Advanced Show Flags,SceneCaptureCube.SceneCapture.Lighting Features Show Flags,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Materials.MaterialList,CineCameraActor.PostProcess.Lens,PostProcessVolume.Lens.Lens,PostProcessVolume.Lens.Lens
 BrushComponent=SceneCaptureCube.SceneCapture.General Show Flags,SceneCaptureCube.SceneCapture.Advanced Show Flags,SceneCaptureCube.SceneCapture.Lighting Features Show Flags,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Materials.MaterialList,CineCameraActor.PostProcess.Lens,PostProcessVolume.Lens.Lens,PostProcessVolume.Lens.Lens
 BrushComponent=PostProcessVolume.Lens.Lens,SceneCaptureCube.SceneCapture.General Show Flags,SceneCaptureCube.SceneCapture.Advanced Show Flags,SceneCaptureCube.SceneCapture.Lighting Features Show Flags,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Materials.MaterialList,CineCameraActor.PostProcess.Lens
@@ -453,7 +454,7 @@ ContentBrowserDrawer.SelectedPaths=/Game/Megascans/3D_Assets
 ContentBrowserDrawer.SelectedPaths=/
 ContentBrowserDrawer.SelectedPaths=/Game/Group_Assets/Aziz/Assets/Piano
 ContentBrowserDrawer.SelectedPaths=/Game/ThirdPerson/Blueprints
-ContentBrowserDrawer.SelectedPaths=/Game/Group_Assets/Aziz/Assets/FlowerLamp
+ContentBrowserDrawer.SelectedPaths=/Game/Group_Assets/Aziz/Assets/Lamp
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -524,7 +525,7 @@ LastLevel=/Game/Living_Room
 LastLevel=/Game/Attic
 LastLevel=/Game/Living_Room
 LastLevel=/Game/stairwellblock3
-LastLevel=/Game/Attic
+LastLevel=/Game/Living_Room
 None=======
 None=======
 None=======
@@ -543,7 +544,7 @@ WorldPartitionRuntimeSpatialHash="\"Object\" "
 WorldPartitionRuntimeHash="\"Object\" "
 Object="\"Object\" "
 Object="\"Object\" "
-Object="\"Object\" "
+Object="\"Object\" \"Object.StaticMesh.BodySetup.Object.AggGeom\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems.ConvexElems[0]\" \"Object.StaticMesh.BodySetup.Object.WalkableSlopeOverride\" \"Object.StaticMesh.BodySetup.Object.DefaultInstance\" \"Object.ImportSettings.AssetImportData.Object.Transform.ImportRotation\" "
 None=======
 None=======
 None=======
@@ -677,7 +678,7 @@ MaterialExpressionMultiply="\"Object\" "
 FbxImportUI="\"Object\" "
 Texture2D="\"Object\" \"Object.Texture.SourceColorSettings\" "
 Texture="\"Object\" \"Object.Texture.SourceColorSettings\" "
-StreamableRenderAsset="\"Object\" \"Object.Texture.SourceColorSettings\" "
+StreamableRenderAsset="\"Object\" \"Object.StaticMesh.BodySetup.Object.AggGeom\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems.ConvexElems[0]\" \"Object.StaticMesh.BodySetup.Object.WalkableSlopeOverride\" \"Object.StaticMesh.BodySetup.Object.DefaultInstance\" \"Object.ImportSettings.AssetImportData.Object.Transform.ImportRotation\" "
 PostProcessVolume="\"Object\" \"Object.PostProcessVolumeSettings.Settings.ColorSaturation\" \"Object.PostProcessVolumeSettings.Settings.ColorContrast\" \"Object.PostProcessVolumeSettings.Settings.ColorGammaShadows\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints\" \"Object.PostProcessVolumeSettings.Settings.WeightedBlendables\" \"Object.PostProcessVolumeSettings.Settings.WeightedBlendables.Array\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object\" \"Object.PostProcessVolumeSettings.Settings.ColorSaturation\" \"Object.PostProcessVolumeSettings.Settings.ColorContrast\" \"Object.PostProcessVolumeSettings.Settings.ColorGammaShadows\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints\" \"Object.PostProcessVolumeSettings.Settings.WeightedBlendables\" \"Object.PostProcessVolumeSettings.Settings.WeightedBlendables.Array\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Brush="\"Object\" \"Object.PostProcessVolumeSettings.Settings.ColorSaturation\" \"Object.PostProcessVolumeSettings.Settings.ColorContrast\" \"Object.PostProcessVolumeSettings.Settings.ColorGammaShadows\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints\" \"Object.PostProcessVolumeSettings.Settings.WeightedBlendables\" \"Object.PostProcessVolumeSettings.Settings.WeightedBlendables.Array\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -2190,6 +2191,7 @@ MediaPlate.Networking=True
 MediaPlate.Input=True
 MediaPlate.Actor=True
 MediaPlayer.Editor=True
+Texture2D.Interchange =True
 
 [DetailMultiObjectNodeExpansion]
 GeneralProjectSettings=True
@@ -2285,7 +2287,7 @@ WmfMediaSettings=True
 [AssetEditorSubsystem]
 CleanShutdown=False
 CleanShutdown=True
-CleanShutdown=True
+CleanShutdown=False
 None=======
 None=======
 None=======
@@ -2316,26 +2318,26 @@ bShowCellCoords=False
 PerWorldEditorSettings=(("/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap", ()),("/Game/abandonedroom_Migration.abandonedroom_Migration", (LoadedEditorRegions=((Min=(X=-102480.867188,Y=-102536.195312,Z=-2097152.000000),Max=(X=102491.187500,Y=102276.851562,Z=2097152.000000),IsValid=True)))))
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Group_Assets/Webs/Webs_Inst1
-MRUItem1=/Game/Group_Assets/Webs/Webs
-MRUItem2=/Game/Group_Assets/Webs/Webs_Inst5
-MRUItem3=/Game/Group_Assets/Webs/Dust_Web_021
-MRUItem4=/Game/Group_Assets/Webs/Webs_Inst2
-MRUItem5=/Game/Group_Assets/Webs/Webs_Inst3
-MRUItem6=/Game/Group_Assets/Webs/Webs_Inst4
-MRUItem7=/Game/Group_Assets/Webs/Spider_Web_01
-MRUItem8=/Game/Group_Assets/Webs/Webs_Inst
-MRUItem9=/Game/Group_Assets/Charlotte/Assets/Wisp/Wisp
-MRUItem10=/Game/StarterContent/Particles/P_Ambient_Dust
-MRUItem11=/Game/Living_Room
-MRUItem12=/Game/Group_Assets/Aziz/Assets/CandleHolders/CandleHolder4
-MRUItem13=/Game/Group_Assets/Aziz/Assets/CandleHolders/CandleHolder2
-MRUItem14=/Game/Group_Assets/Aziz/Assets/CandleHolders/CandleHolder_low
-MRUItem15=/Game/Group_Assets/Aziz/Assets/CandleHolders/MI_CandleHolder
-MRUItem16=/Game/Group_Assets/Aziz/Assets/CandleHolders/CandleHolder_low_DefaultMaterial_OcclusionRoughnessMetallic
-MRUItem17=/Game/Group_Assets/Tashan/suitcases/suitcase_low_2
-MRUItem18=/Game/Group_Assets/Tashan/box/luagge2
-MRUItem19=/Game/Group_Assets/Tashan/box/mat_lugt2
+MRUItem0=/Game/Group_Assets/Aziz/Assets/SmallCabinets/Cabinet2
+MRUItem1=/Game/Group_Assets/Aziz/Assets/SmallCabinets/Cabinet1
+MRUItem2=/Game/Group_Assets/Aziz/Assets/SmallCabinets/BrownHalfCabinet_low_DefaultMaterial_OcclusionRoughnessMetallic
+MRUItem3=/Game/Group_Assets/Aziz/Assets/SmallCabinets/MI_HalfCabinets
+MRUItem4=/Game/Living_Room
+MRUItem5=/Game/Group_Assets/Webs/Webs_Inst1
+MRUItem6=/Game/Group_Assets/Webs/Webs
+MRUItem7=/Game/Group_Assets/Webs/Webs_Inst5
+MRUItem8=/Game/Group_Assets/Webs/Dust_Web_021
+MRUItem9=/Game/Group_Assets/Webs/Webs_Inst2
+MRUItem10=/Game/Group_Assets/Webs/Webs_Inst3
+MRUItem11=/Game/Group_Assets/Webs/Webs_Inst4
+MRUItem12=/Game/Group_Assets/Webs/Spider_Web_01
+MRUItem13=/Game/Group_Assets/Webs/Webs_Inst
+MRUItem14=/Game/Group_Assets/Charlotte/Assets/Wisp/Wisp
+MRUItem15=/Game/StarterContent/Particles/P_Ambient_Dust
+MRUItem16=/Game/Group_Assets/Aziz/Assets/CandleHolders/CandleHolder4
+MRUItem17=/Game/Group_Assets/Aziz/Assets/CandleHolders/CandleHolder2
+MRUItem18=/Game/Group_Assets/Aziz/Assets/CandleHolders/CandleHolder_low
+MRUItem19=/Game/Group_Assets/Aziz/Assets/CandleHolders/MI_CandleHolder
 
 [DetailCategoriesAdvanced]
 PreviewMaterial.Translucency=True
@@ -2406,6 +2408,10 @@ None=======
 None=======
 None=======
 None=======
+RecentlyPlaced=/Game/Group_Assets/Aziz/Assets/Lamp/Lamp.Lamp;
+RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLight_0
+RecentlyPlaced=/Game/Group_Assets/Aziz/Assets/SmallCabinets/Cabinet2.Cabinet2;
+RecentlyPlaced=/Game/Group_Assets/Aziz/Assets/SmallCabinets/Cabinet1.Cabinet1;
 RecentlyPlaced=/Game/Group_Assets/Aziz/Assets/FlowerLamp/FlowerLamp_low.FlowerLamp_low;
 RecentlyPlaced=/Game/Group_Assets/Aziz/Assets/Plaque/SM_Yggdrasil.SM_Yggdrasil;
 RecentlyPlaced=/Game/Group_Assets/Aziz/Assets/Clock/Clock_low.Clock_low;
@@ -2422,10 +2428,6 @@ RecentlyPlaced=/Game/Group_Assets/Webs/Webs_Inst1.Webs_Inst1;
 RecentlyPlaced=/Game/Group_Assets/Webs/Webs_Inst.Webs_Inst;
 RecentlyPlaced=/Engine/BasicShapes/Plane.Plane;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Game/Group_Assets/Webs/Webs.Webs;
-RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
-RecentlyPlaced=/Game/Group_Assets/Webs/Webs_Inst5.Webs_Inst5;
-RecentlyPlaced=/Game/Group_Assets/Webs/Webs_Inst4.Webs_Inst4;
-RecentlyPlaced=/Engine/BasicShapes/Sphere.Sphere;/Engine/Transient.ActorFactoryBasicShape_0
 
 [AssetEditorToolkitTabLocation]
 /Game/Group_Materials/Glass/Glass_Inst.Glass_Inst=1
@@ -2731,9 +2733,13 @@ None=======
 /Game/Group_Assets/Webs/Webs_Inst3.Webs_Inst3=1
 /Game/Group_Assets/Webs/Dust_Web_021.Dust_Web_021=1
 /Game/Group_Assets/Webs/Webs_Inst5.Webs_Inst5=1
+/Game/Group_Assets/Aziz/Assets/SmallCabinets/BrownHalfCabinet_low_DefaultMaterial_OcclusionRoughnessMetallic.BrownHalfCabinet_low_DefaultMaterial_OcclusionRoughnessMetallic=1
+/Game/Group_Assets/Aziz/Assets/SmallCabinets/MI_HalfCabinets.MI_HalfCabinets=1
+/Game/Group_Assets/Aziz/Assets/SmallCabinets/Cabinet1.Cabinet1=1
+/Game/Group_Assets/Aziz/Assets/SmallCabinets/Cabinet2.Cabinet2=1
 
 [MaterialInstanceEditor]
-bShowGrid=True
+bShowGrid=False
 bDrawGrid=False
 PrimType=1
 
@@ -4086,7 +4092,7 @@ bBuildNanite=False
 bGenerateLightmapUVs=True
 bOneConvexHullPerUCX=True
 bAutoGenerateCollision=True
-bCombineMeshes=False
+bCombineMeshes=True
 DistanceFieldResolutionScale=1.000000
 bTransformVertexToAbsolute=True
 bBakePivotInVertex=False
