--- a/MorriganHall 5.2/Saved/Config/ConsoleHistory.ini
+++ b/MorriganHall 5.2/Saved/Config/ConsoleHistory.ini
@@ -1,4 +1,7 @@
 [ConsoleHistory]
 History=r.Streaming.PoolSize 6000
 History=r.Streaming.PoolSize 10000
+History=r.LightCulling.Quality 2
+History=r.ShadowQuality 3
+History=r.ShadowQuality 6
 
