--- a/MorriganHall 5.2/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/MorriganHall 5.2/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -124,7 +124,6 @@ LastExecutedLaunchName=SPIRIT_OF_FIRE
 LastExecutedPIEPreviewDevice=
 DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
-LastExecutedPlayModeType=PlayMode_Simulate
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
 CameraSpeed=2
@@ -180,9 +179,9 @@ GridEnabled=False
 RotGridEnabled=False
 
 [MRU]
-MRUItem0=/Game/abandonedroom_V2
-MRUItem1=/Game/stairwellblock3
-MRUItem2=/Game/Living_Room
+MRUItem0=/Game/Living_Room
+MRUItem1=/Game/abandonedroom_V2
+MRUItem2=/Game/stairwellblock3
 MRUItem3=/Game/Attic
 MRUItem4=/Game/stairwellblock3_2
 MRUItem5=/Game/stairwellblock2
@@ -458,7 +457,7 @@ ContentBrowserDrawer.SelectedPaths=/Game/Megascans/3D_Assets
 ContentBrowserDrawer.SelectedPaths=/
 ContentBrowserDrawer.SelectedPaths=/Game/Group_Assets/Aziz/Assets/Piano
 ContentBrowserDrawer.SelectedPaths=/Game/ThirdPerson/Blueprints
-ContentBrowserDrawer.SelectedPaths=/Game/Group_Assets/Aziz/Assets/Lamp
+ContentBrowserDrawer.SelectedPaths=/Game/Group_Assets/Aziz/Assets/Table
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -529,7 +528,7 @@ LastLevel=/Game/Living_Room
 LastLevel=/Game/Attic
 LastLevel=/Game/Living_Room
 LastLevel=/Game/stairwellblock3
-LastLevel=/Game/abandonedroom_V2
+LastLevel=/Game/Living_Room
 None=======
 None=======
 None=======
@@ -548,7 +547,7 @@ WorldPartitionRuntimeSpatialHash="\"Object\" "
 WorldPartitionRuntimeHash="\"Object\" "
 Object="\"Object\" "
 Object="\"Object\" "
-Object="\"Object\" "
+Object="\"Object\" \"Object.StaticMesh.BodySetup.Object.AggGeom\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems.ConvexElems[0]\" \"Object.StaticMesh.BodySetup.Object.WalkableSlopeOverride\" \"Object.StaticMesh.BodySetup.Object.DefaultInstance\" \"Object.ImportSettings.AssetImportData.Object.Transform.ImportRotation\" "
 None=======
 None=======
 None=======
@@ -660,7 +659,7 @@ SceneCapture="\"Object\" "
 StaticMeshComponent="\"Object\" "
 MeshComponent="\"Object\" "
 PrimitiveComponent="\"Object\" "
-MaterialEditorInstanceConstant="\"Object\" \"Object.ParameterGroups.ParameterGroups[1].Parameters.Parameters[1].Object.ParameterValue\" "
+MaterialEditorInstanceConstant="\"Object\" "
 MaterialInstanceConstant="\"Object\" "
 MaterialInstance="\"Object\" "
 MaterialInterface="\"Object\" "
@@ -2212,6 +2211,7 @@ ExistingMeshMaterialProperties.PreviewMaterial=True
 UVLayoutPreviewProperties.Preview UV Layout=True
 ParameterizeMeshToolUVAtlasProperties.UVAtlas=True
 ParameterizeMeshToolXAtlasProperties.XAtlas=True
+Texture2D.Interchange =True
 
 [DetailMultiObjectNodeExpansion]
 GeneralProjectSettings=True
@@ -2307,7 +2307,7 @@ WmfMediaSettings=True
 [AssetEditorSubsystem]
 CleanShutdown=False
 CleanShutdown=True
-CleanShutdown=True
+CleanShutdown=False
 None=======
 None=======
 None=======
@@ -2338,26 +2338,26 @@ bShowCellCoords=False
 PerWorldEditorSettings=(("/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap", ()),("/Game/abandonedroom_Migration.abandonedroom_Migration", (LoadedEditorRegions=((Min=(X=-102480.867188,Y=-102536.195312,Z=-2097152.000000),Max=(X=102491.187500,Y=102276.851562,Z=2097152.000000),IsValid=True)))))
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Group_Assets/Tashan/M4/Tashan/Assets/blockout/MM_whitewood_Inst1
-MRUItem1=/Game/Megascans/3D_Assets/Old_Cushion_vishcehdb/MI_Old_Cushion_vishcehdb_4K_Inst
-MRUItem2=/Game/Group_Assets/Tashan/M4/Tashan/Assets/quilt/mat_quilt
-MRUItem3=/Game/Group_Assets/Tashan/M4/Tashan/Assets/quilt/mat_quilt_Inst_Inst
-MRUItem4=/Game/Group_Assets/Tashan/M4/Tashan/Assets/quilt/mat_quilt_Inst
-MRUItem5=/Game/Group_Assets/bed/sm_bed
-MRUItem6=/Game/Group_Assets/Tashan/M4/Tashan/Assets/blockout/MM_Texture
-MRUItem7=/Game/Group_Assets/Tashan/M4/Tashan/Assets/blockout/MM_whitewood
-MRUItem8=/Game/Group_Assets/Tashan/M4/Tashan/Assets/blockout/MM_whitewood_frame
-MRUItem9=/Game/Group_Assets/Tashan/M4/Tashan/Assets/blockout/MM_frame
-MRUItem10=/Game/Group_Assets/Tashan/Wood/MM_wood
-MRUItem11=/Game/Group_Assets/Tashan/Wood/cabinet
-MRUItem12=/Game/Megascans/3D_Assets/Ceramic_Bottle_uhwkea3jw/MI_Ceramic_Bottle_uhwkea3jw_4K_Inst
-MRUItem13=/Game/Megascans/3D_Assets/Ceramic_Bottle_uhwkea3jw/MI_Ceramic_Bottle_uhwkea3jw_4K
-MRUItem14=/Game/Group_Assets/Tashan/rails/FABRIC_1_FRONT_4285
-MRUItem15=/Engine/BasicShapes/BasicShapeMaterial
-MRUItem16=/Game/Group_Assets/Tashan/knicks/jewlsbox
-MRUItem17=/Game/Group_Assets/Tashan/knicks/knick1_Inst
-MRUItem18=/Game/Group_Assets/Tashan/knicks/jewlsbox_DefaultMaterial_BaseColor
-MRUItem19=/Game/Group_Assets/Tashan/knicks/jewlsbox_DefaultMaterial_OcclusionRoughnessMetallic
+MRUItem0=/Game/Group_Assets/Aziz/Assets/Table/Table_low
+MRUItem1=/Game/Group_Assets/Aziz/Assets/Table/Table_low_DefaultMaterial_OcclusionRoughnessMetallic
+MRUItem2=/Game/Group_Assets/Aziz/Assets/Table/MI_TableLivingRoom
+MRUItem3=/Game/Living_Room
+MRUItem4=/Game/Group_Assets/Tashan/M4/Tashan/Assets/blockout/MM_whitewood_Inst1
+MRUItem5=/Game/Megascans/3D_Assets/Old_Cushion_vishcehdb/MI_Old_Cushion_vishcehdb_4K_Inst
+MRUItem6=/Game/Group_Assets/Tashan/M4/Tashan/Assets/quilt/mat_quilt
+MRUItem7=/Game/Group_Assets/Tashan/M4/Tashan/Assets/quilt/mat_quilt_Inst_Inst
+MRUItem8=/Game/Group_Assets/Tashan/M4/Tashan/Assets/quilt/mat_quilt_Inst
+MRUItem9=/Game/Group_Assets/bed/sm_bed
+MRUItem10=/Game/Group_Assets/Tashan/M4/Tashan/Assets/blockout/MM_Texture
+MRUItem11=/Game/Group_Assets/Tashan/M4/Tashan/Assets/blockout/MM_whitewood
+MRUItem12=/Game/Group_Assets/Tashan/M4/Tashan/Assets/blockout/MM_whitewood_frame
+MRUItem13=/Game/Group_Assets/Tashan/M4/Tashan/Assets/blockout/MM_frame
+MRUItem14=/Game/Group_Assets/Tashan/Wood/MM_wood
+MRUItem15=/Game/Group_Assets/Tashan/Wood/cabinet
+MRUItem16=/Game/Megascans/3D_Assets/Ceramic_Bottle_uhwkea3jw/MI_Ceramic_Bottle_uhwkea3jw_4K_Inst
+MRUItem17=/Game/Megascans/3D_Assets/Ceramic_Bottle_uhwkea3jw/MI_Ceramic_Bottle_uhwkea3jw_4K
+MRUItem18=/Game/Group_Assets/Tashan/rails/FABRIC_1_FRONT_4285
+MRUItem19=/Engine/BasicShapes/BasicShapeMaterial
 
 [DetailCategoriesAdvanced]
 PreviewMaterial.Translucency=True
@@ -2430,6 +2430,7 @@ None=======
 None=======
 None=======
 None=======
+RecentlyPlaced=/Game/Group_Assets/Aziz/Assets/Table/Table_low.Table_low;
 RecentlyPlaced=/Game/Group_Materials/Paintings/MM_Pictures_Inst_Inst.MM_Pictures_Inst_Inst;
 RecentlyPlaced=/Game/Group_Materials/Paintings/MM_Pictures_Inst1_Inst1.MM_Pictures_Inst1_Inst1;
 RecentlyPlaced=/Game/Group_Materials/Paintings/EfQnIju7ttWF6UJHx3CU--1--2764i.EfQnIju7ttWF6UJHx3CU--1--2764i;
@@ -2449,7 +2450,6 @@ RecentlyPlaced=/Game/Group_Assets/bed/sm_quilt_sm_mattress.sm_quilt_sm_mattress;
 RecentlyPlaced=/Game/Group_Assets/bed/sm_quilt.sm_quilt;
 RecentlyPlaced=/Game/Group_Assets/bed/sm_bed.sm_bed;/Engine/Transient.EditorStaticMeshFactory_0
 RecentlyPlaced=/Game/Megascans/3D_Assets/Worn_Wooden_Crate_vi5hdewga/S_Worn_Wooden_Crate_vi5hdewga_lod3_Var1.S_Worn_Wooden_Crate_vi5hdewga_lod3_Var1;
-RecentlyPlaced=/Game/Megascans/3D_Assets/Dirty_Wooden_Table_tl1xfcbfa/S_Dirty_Wooden_Table_tl1xfcbfa_lod3.S_Dirty_Wooden_Table_tl1xfcbfa_lod3;
 
 [AssetEditorToolkitTabLocation]
 /Game/Group_Materials/Glass/Glass_Inst.Glass_Inst=1
@@ -2781,9 +2781,12 @@ None=======
 /Game/Group_Assets/Tashan/M4/Tashan/Assets/quilt/mat_quilt_Inst_Inst.mat_quilt_Inst_Inst=1
 /Game/Group_Assets/Tashan/M4/Tashan/Assets/quilt/mat_quilt.mat_quilt=1
 /Game/Megascans/3D_Assets/Old_Cushion_vishcehdb/MI_Old_Cushion_vishcehdb_4K_Inst.MI_Old_Cushion_vishcehdb_4K_Inst=1
+/Game/Group_Assets/Aziz/Assets/Table/Table_low_DefaultMaterial_OcclusionRoughnessMetallic.Table_low_DefaultMaterial_OcclusionRoughnessMetallic=1
+/Game/Group_Assets/Aziz/Assets/Table/MI_TableLivingRoom.MI_TableLivingRoom=1
+/Game/Group_Assets/Aziz/Assets/Table/Table_low.Table_low=1
 
 [MaterialInstanceEditor]
-bShowGrid=True
+bShowGrid=False
 bDrawGrid=False
 PrimType=3
 
@@ -4140,7 +4143,7 @@ bBuildNanite=False
 bGenerateLightmapUVs=True
 bOneConvexHullPerUCX=True
 bAutoGenerateCollision=True
-bCombineMeshes=False
+bCombineMeshes=True
 DistanceFieldResolutionScale=1.000000
 bTransformVertexToAbsolute=True
 bBakePivotInVertex=False
