--- a/MorriganHall 5.2/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/MorriganHall 5.2/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -457,7 +457,7 @@ ContentBrowserDrawer.SelectedPaths=/Game/Megascans/3D_Assets
 ContentBrowserDrawer.SelectedPaths=/
 ContentBrowserDrawer.SelectedPaths=/Game/Group_Assets/Aziz/Assets/Piano
 ContentBrowserDrawer.SelectedPaths=/Game/ThirdPerson/Blueprints
-ContentBrowserDrawer.SelectedPaths=/Game/Group_Assets/Aziz/Assets/SmallCabinets
+ContentBrowserDrawer.SelectedPaths=/Game/Megascans/Decals
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -767,7 +767,7 @@ HoleFillToolProperties="\"Object\" "
 HoleFillStatisticsProperties="\"Object\" "
 MaterialExpressionConstant2Vector="\"Object\" "
 DirectionalLight="\"Object.Light.DirectionalLightComponent.Object.Light.LightingChannels\" "
-Light="\"Object.Light.DirectionalLightComponent.Object.Light.LightingChannels\" "
+Light=
 StaticMeshActor="\"Object\" "
 MeshPaintModeSettings="\"Object\" "
 MaterialExpressionTextureObjectParameter="\"Object\" "
@@ -2430,6 +2430,10 @@ None=======
 None=======
 None=======
 None=======
+RecentlyPlaced=/Game/Megascans/Decals/Concrete_Crack_se4otkg/MI_Concrete_Crack_se4otkg_4K.MI_Concrete_Crack_se4otkg_4K;
+RecentlyPlaced=/Game/Megascans/Decals/Burnt_Paper_udggaalka/MI_Burnt_Paper_udggaalka_2K.MI_Burnt_Paper_udggaalka_2K;
+RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLight_0
+RecentlyPlaced=/Game/Neglect/M3/charassets/poop02_SM_Door_02_low.poop02_SM_Door_02_low;
 RecentlyPlaced=/Game/Group_Assets/Aziz/Assets/Table/Table_low.Table_low;
 RecentlyPlaced=/Game/Group_Materials/Paintings/MM_Pictures_Inst_Inst.MM_Pictures_Inst_Inst;
 RecentlyPlaced=/Game/Group_Materials/Paintings/MM_Pictures_Inst1_Inst1.MM_Pictures_Inst1_Inst1;
@@ -2446,10 +2450,6 @@ RecentlyPlaced=/Game/Megascans/Surfaces/Scratched_Painted_Metal_Sheet_vbsieik/MI
 RecentlyPlaced=/Game/Megascans/Surfaces/Scratched_Painted_Metal_Sheet_vbsieik/MI_Scratched_Painted_Metal_Sheet_vbsieik_2K_Inst.MI_Scratched_Painted_Metal_Sheet_vbsieik_2K_Inst;
 RecentlyPlaced=/Game/Group_Assets/bed/sm_quilt_sm_quilt.sm_quilt_sm_quilt;
 RecentlyPlaced=/Game/Group_Assets/bed/sm_quilt_sm_bedframe.sm_quilt_sm_bedframe;
-RecentlyPlaced=/Game/Group_Assets/bed/sm_quilt_sm_mattress.sm_quilt_sm_mattress;
-RecentlyPlaced=/Game/Group_Assets/bed/sm_quilt.sm_quilt;
-RecentlyPlaced=/Game/Group_Assets/bed/sm_bed.sm_bed;/Engine/Transient.EditorStaticMeshFactory_0
-RecentlyPlaced=/Game/Megascans/3D_Assets/Worn_Wooden_Crate_vi5hdewga/S_Worn_Wooden_Crate_vi5hdewga_lod3_Var1.S_Worn_Wooden_Crate_vi5hdewga_lod3_Var1;
 
 [AssetEditorToolkitTabLocation]
 /Game/Group_Materials/Glass/Glass_Inst.Glass_Inst=1
