i want you to BREAK MY HEAAAART

--- a/MorriganHall 5.2/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/MorriganHall 5.2/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -457,7 +457,7 @@ ContentBrowserDrawer.SelectedPaths=/Game/Megascans/3D_Assets
 ContentBrowserDrawer.SelectedPaths=/
 ContentBrowserDrawer.SelectedPaths=/Game/Group_Assets/Aziz/Assets/Piano
 ContentBrowserDrawer.SelectedPaths=/Game/ThirdPerson/Blueprints
-ContentBrowserDrawer.SelectedPaths=/Game/Megascans/Decals
+ContentBrowserDrawer.SelectedPaths=/Game/Megascans/Decals/Concrete_Leakage_tk3jefoc
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -2430,6 +2430,8 @@ None=======
 None=======
 None=======
 None=======
+RecentlyPlaced=/Game/Megascans/Decals/Concrete_Crack_sfelnxg/MI_Concrete_Crack_sfelnxg_4K.MI_Concrete_Crack_sfelnxg_4K;
+RecentlyPlaced=/Game/Megascans/Decals/Concrete_Crack_sfelnxg/MI_Concrete_Crack_sfelnxg_4K_Inst_Inst.MI_Concrete_Crack_sfelnxg_4K_Inst_Inst;
 RecentlyPlaced=/Game/Megascans/Decals/Concrete_Crack_se4otkg/MI_Concrete_Crack_se4otkg_4K.MI_Concrete_Crack_se4otkg_4K;
 RecentlyPlaced=/Game/Megascans/Decals/Burnt_Paper_udggaalka/MI_Burnt_Paper_udggaalka_2K.MI_Burnt_Paper_udggaalka_2K;
 RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLight_0
@@ -2448,8 +2450,6 @@ RecentlyPlaced=/Game/Megascans/3D_Assets/Old_Cushion_vishcehdb/MI_Old_Cushion_vi
 RecentlyPlaced=/Game/Megascans/3D_Assets/Old_Cushion_vishcehdb/MI_Old_Cushion_vishcehdb_4K_Inst.MI_Old_Cushion_vishcehdb_4K_Inst;
 RecentlyPlaced=/Game/Megascans/Surfaces/Scratched_Painted_Metal_Sheet_vbsieik/MI_Scratched_Painted_Metal_Sheet_vbsieik_2K.MI_Scratched_Painted_Metal_Sheet_vbsieik_2K;
 RecentlyPlaced=/Game/Megascans/Surfaces/Scratched_Painted_Metal_Sheet_vbsieik/MI_Scratched_Painted_Metal_Sheet_vbsieik_2K_Inst.MI_Scratched_Painted_Metal_Sheet_vbsieik_2K_Inst;
-RecentlyPlaced=/Game/Group_Assets/bed/sm_quilt_sm_quilt.sm_quilt_sm_quilt;
-RecentlyPlaced=/Game/Group_Assets/bed/sm_quilt_sm_bedframe.sm_quilt_sm_bedframe;
 
 [AssetEditorToolkitTabLocation]
 /Game/Group_Materials/Glass/Glass_Inst.Glass_Inst=1
