--- a/MorriganHall 5.2/Saved/Config/ConsoleHistory.ini
+++ b/MorriganHall 5.2/Saved/Config/ConsoleHistory.ini
@@ -4,4 +4,5 @@ History=r.Streaming.PoolSize 10000
 History=r.LightCulling.Quality 2
 History=r.ShadowQuality 3
 History=r.ShadowQuality 6
+History=r.Lumen.Reflections.HierarchicalScreenTraces.MaxIterations 256
 
