--- a/MorriganHall 5.2/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/MorriganHall 5.2/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -181,9 +181,9 @@ CurrentScalingGridSize=4
 GridEnabled=False
 
 [MRU]
-MRUItem0=/Game/Attic
-MRUItem1=/Game/firstfloor
-MRUItem2=/Game/Living_Room
+MRUItem0=/Game/Living_Room
+MRUItem1=/Game/Attic
+MRUItem2=/Game/firstfloor
 MRUItem3=/Game/abandonedroom_V2
 MRUItem4=/Game/stairwellblock3
 MRUItem5=/Game/stairwellblock3_2
@@ -464,7 +464,7 @@ ContentBrowserDrawer.SelectedPaths=/Game/Megascans/3D_Assets
 ContentBrowserDrawer.SelectedPaths=/
 ContentBrowserDrawer.SelectedPaths=/Game/Group_Assets/Aziz/Assets/Piano
 ContentBrowserDrawer.SelectedPaths=/Game/ThirdPerson/Blueprints
-ContentBrowserDrawer.SelectedPaths=/Game/Megascans/3D_Assets/Cardboard_Boxes_Pack_uewlfg2va
+ContentBrowserDrawer.SelectedPaths=/Game/Group_Assets/Aziz/Assets/Table
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -538,7 +538,7 @@ LastLevel=/Game/Attic
 LastLevel=/Game/Living_Room
 LastLevel=/Game/stairwellblock3
 LastLevel=/Game/stairwellblock3
-LastLevel=/Game/Attic
+LastLevel=/Game/Living_Room
 None=======
 None=======
 None=======
@@ -1533,6 +1533,7 @@ Texture2D.Interchange=True
 Texture2D.Interchange=True
 Texture2D.Interchange=True
 Texture2D.Interchange=True
+Texture2D.Interchange=True
 None=======
 None=======
 None=======
@@ -2293,7 +2294,6 @@ MoviePipelineDeferredPassBase.Post Processing=True
 MoviePipelineDeferredPassBase.Deferred Renderer Data=True
 MoviePipelineDeferredPassBase.Stencil Clip Layers=True
 MoviePipelineImageSequenceOutput_PNG.PNG=True
-Texture2D.Interchange =True
 
 [DetailMultiObjectNodeExpansion]
 GeneralProjectSettings=True
@@ -2389,7 +2389,7 @@ WmfMediaSettings=True
 [AssetEditorSubsystem]
 CleanShutdown=False
 CleanShutdown=True
-CleanShutdown=True
+CleanShutdown=False
 None=======
 None=======
 None=======
@@ -2420,21 +2420,21 @@ bShowCellCoords=False
 PerWorldEditorSettings=(("/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap", ()),("/Game/abandonedroom_Migration.abandonedroom_Migration", (LoadedEditorRegions=((Min=(X=-102480.867188,Y=-102536.195312,Z=-2097152.000000),Max=(X=102491.187500,Y=102276.851562,Z=2097152.000000),IsValid=True)))))
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Assets/Amy/Asset/workcase/ORM
-MRUItem1=/Game/Assets/Amy/Asset/workcase/M_Workcase
-MRUItem2=/Game/Group_Assets/Aziz/Assets/Cabinet/Cabinet_low
-MRUItem3=/Game/Group_Materials/Metal/MM_Metal_Inst_02
-MRUItem4=/Game/Group_Assets/Charlotte/Assets/Wires/Wires_LightSwitch_Wire
-MRUItem5=/Game/Group_Assets/Charlotte/Assets/Lights/Light_Bulb_Outer
-MRUItem6=/Game/Group_Materials/Glass/Glass_Inst_02
-MRUItem7=/Game/Group_Assets/Charlotte/Assets/Wires/Wires_LightBulb_Wire
-MRUItem8=/Game/Group_Assets/Charlotte/Assets/Dress/Dress_low
-MRUItem9=/Game/Group_Assets/Charlotte/Assets/Dress/Dress_low_lambert2_OcclusionRoughnessMetallic
-MRUItem10=/Game/Group_Assets/Charlotte/Assets/Dress/Dress
-MRUItem11=/Game/Group_Materials/Metal/MM_Metal_Inst2
-MRUItem12=/Game/Group_Assets/lightswitch/Material_Inst
-MRUItem13=/Game/firstfloor
-MRUItem14=/Game/Living_Room
+MRUItem0=/Game/Living_Room
+MRUItem1=/Game/Assets/Amy/Asset/workcase/ORM
+MRUItem2=/Game/Assets/Amy/Asset/workcase/M_Workcase
+MRUItem3=/Game/Group_Assets/Aziz/Assets/Cabinet/Cabinet_low
+MRUItem4=/Game/Group_Materials/Metal/MM_Metal_Inst_02
+MRUItem5=/Game/Group_Assets/Charlotte/Assets/Wires/Wires_LightSwitch_Wire
+MRUItem6=/Game/Group_Assets/Charlotte/Assets/Lights/Light_Bulb_Outer
+MRUItem7=/Game/Group_Materials/Glass/Glass_Inst_02
+MRUItem8=/Game/Group_Assets/Charlotte/Assets/Wires/Wires_LightBulb_Wire
+MRUItem9=/Game/Group_Assets/Charlotte/Assets/Dress/Dress_low
+MRUItem10=/Game/Group_Assets/Charlotte/Assets/Dress/Dress_low_lambert2_OcclusionRoughnessMetallic
+MRUItem11=/Game/Group_Assets/Charlotte/Assets/Dress/Dress
+MRUItem12=/Game/Group_Materials/Metal/MM_Metal_Inst2
+MRUItem13=/Game/Group_Assets/lightswitch/Material_Inst
+MRUItem14=/Game/firstfloor
 MRUItem15=/Game/Group_Assets/Aziz/Assets/Table/Table_low
 MRUItem16=/Game/Group_Assets/Aziz/Assets/Table/Table_low_DefaultMaterial_OcclusionRoughnessMetallic
 MRUItem17=/Game/Group_Assets/Aziz/Assets/Table/MI_TableLivingRoom
