--- a/MorriganHall 5.2/Saved/Config/ConsoleHistory.ini
+++ b/MorriganHall 5.2/Saved/Config/ConsoleHistory.ini
@@ -6,4 +6,5 @@ History=r.ShadowQuality 3
 History=r.ShadowQuality 6
 History=r.Lumen.Reflections.HierarchicalScreenTraces.MaxIterations 256
 History=r.Lumen.Reflections.HierarchicalScreenTraces.MaxIterations 128
+History=r.Lumen.Reflections.HierarchicalScreenTraces.MaxIterations 4
 
