--- a/MorriganHall 5.2/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/MorriganHall 5.2/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -303,13 +303,13 @@ PostProcessVolume=PostProcessVolume.Lens.Lens,PostProcessVolume.Lens.Lens
 PostProcessVolume=PostProcessVolume.Lens.Lens,PostProcessVolume.Lens.Lens
 PostProcessVolume=PostProcessVolume.Lens.Lens,PostProcessVolume.Lens.Lens
 PostProcessVolume=PostProcessVolume.Lens.Lens,PostProcessVolume.Lens.Lens
-PostProcessVolume=PostProcessVolume.Lens.Lens,PostProcessVolume.Lens.Lens
+PostProcessVolume=PostProcessVolume.Lens.Lens,SceneCaptureCube.SceneCapture.General Show Flags,SceneCaptureCube.SceneCapture.Advanced Show Flags,SceneCaptureCube.SceneCapture.Lighting Features Show Flags,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Materials.MaterialList,CineCameraActor.PostProcess.Lens,CineCameraActor.PostProcess.Rendering Features
 BrushComponent=SceneCaptureCube.SceneCapture.General Show Flags,SceneCaptureCube.SceneCapture.Advanced Show Flags,SceneCaptureCube.SceneCapture.Lighting Features Show Flags,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Materials.MaterialList,CineCameraActor.PostProcess.Lens,PostProcessVolume.Lens.Lens,PostProcessVolume.Lens.Lens
 BrushComponent=SceneCaptureCube.SceneCapture.General Show Flags,SceneCaptureCube.SceneCapture.Advanced Show Flags,SceneCaptureCube.SceneCapture.Lighting Features Show Flags,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Materials.MaterialList,CineCameraActor.PostProcess.Lens,PostProcessVolume.Lens.Lens,PostProcessVolume.Lens.Lens
 BrushComponent=PostProcessVolume.Lens.Lens,SceneCaptureCube.SceneCapture.General Show Flags,SceneCaptureCube.SceneCapture.Advanced Show Flags,SceneCaptureCube.SceneCapture.Lighting Features Show Flags,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Materials.MaterialList,CineCameraActor.PostProcess.Lens
 BrushComponent=SceneCaptureCube.SceneCapture.General Show Flags,SceneCaptureCube.SceneCapture.Advanced Show Flags,SceneCaptureCube.SceneCapture.Lighting Features Show Flags,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Materials.MaterialList,CineCameraActor.PostProcess.Lens,PostProcessVolume.Lens.Lens,PostProcessVolume.Reflections.Reflections
 BrushComponent=PostProcessVolume.Lens.Lens,PostProcessVolume.Lens.Lens
-BrushComponent=SceneCaptureCube.SceneCapture.General Show Flags,SceneCaptureCube.SceneCapture.Advanced Show Flags,SceneCaptureCube.SceneCapture.Lighting Features Show Flags,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Materials.MaterialList,CineCameraActor.PostProcess.Lens,CineCameraActor.PostProcess.Rendering Features,PostProcessVolume.Lens.Lens,PostProcessVolume.Lens.Lens
+BrushComponent=SceneCaptureCube.SceneCapture.General Show Flags,SceneCaptureCube.SceneCapture.Advanced Show Flags,SceneCaptureCube.SceneCapture.Lighting Features Show Flags,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Materials.MaterialList,CineCameraActor.PostProcess.Lens,CineCameraActor.PostProcess.Rendering Features,PostProcessVolume.Lens.Lens,PostProcessVolume.Color Grading.Color Grading
 wardrobe_C=SceneCaptureCube.SceneCapture.General Show Flags,SceneCaptureCube.SceneCapture.Advanced Show Flags,SceneCaptureCube.SceneCapture.Lighting Features Show Flags,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,CineCameraActor.PostProcess.Lens,PostProcessVolume.Lens.Lens
 wardrobe_C=SceneCaptureCube.SceneCapture.General Show Flags,SceneCaptureCube.SceneCapture.Advanced Show Flags,SceneCaptureCube.SceneCapture.Lighting Features Show Flags,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Materials.MaterialList,CineCameraActor.PostProcess.Lens,CineCameraActor.PostProcess.Rendering Features,PostProcessVolume.Lens.Lens
 StaticMeshComponent=SceneCaptureCube.SceneCapture.General Show Flags,SceneCaptureCube.SceneCapture.Advanced Show Flags,SceneCaptureCube.SceneCapture.Lighting Features Show Flags,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,CineCameraActor.PostProcess.Lens,PostProcessVolume.Lens.Lens
@@ -492,7 +492,7 @@ ContentBrowserTab1.SelectedPaths=/Game/Group_Assets/Aziz/Assets/CurtainPole
 ContentBrowserTab1.SelectedPaths=/Game/Cinematics/Sequences/SewingRoom
 ContentBrowserTab1.SelectedPaths=/Game/Megascans/Surfaces
 ContentBrowserTab1.SelectedPaths=/Game/Group_Assets/Aziz/Assets/Pillows/SmallerPillows
-ContentBrowserTab1.SelectedPaths=/Game/Megascans/Surfaces/Multi-colored_Lines_Fabric_scklezp0
+ContentBrowserTab1.SelectedPaths=/Game/Group_Assets/Aziz/Assets/Cabinet
 None=======
 None=======
 None=======
@@ -567,7 +567,7 @@ ContentBrowserDrawer.SelectedPaths=/Game/Group_Assets/Aziz/Assets/DeerHead
 ContentBrowserDrawer.SelectedPaths=/Game
 ContentBrowserDrawer.SelectedPaths=/Game/Group_Assets/Aziz/Assets/CurtainPole
 ContentBrowserDrawer.SelectedPaths=/Game/Group_Assets/Aziz/Assets/Pillows/SmallerPillows
-ContentBrowserDrawer.SelectedPaths=/Game/Group_Assets/Aziz/Assets/Cabinet
+ContentBrowserDrawer.SelectedPaths=/Game/Group_Assets/Aziz/Assets
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -683,7 +683,7 @@ WorldPartitionRuntimeSpatialHash="\"Object\" "
 WorldPartitionRuntimeHash="\"Object\" "
 Object="\"Object\" "
 Object="\"Object\" "
-Object="\"Object\" \"Object.StaticMesh.BodySetup.Object.AggGeom\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems\" \"Object.StaticMesh.BodySetup.Object.WalkableSlopeOverride\" \"Object.StaticMesh.BodySetup.Object.DefaultInstance\" \"Object.ImportSettings.AssetImportData.Object.Transform.ImportRotation\" "
+Object="\"Object\" "
 None=======
 None=======
 None=======
@@ -2833,6 +2833,7 @@ None=======
 None=======
 None=======
 None=======
+RecentlyPlaced=/Game/Group_Assets/Aziz/Assets/SM_OuterBox.SM_OuterBox;
 RecentlyPlaced=/Game/Group_Assets/Aziz/Assets/Cabinet/Cabinet_low.Cabinet_low;
 RecentlyPlaced=/Engine/BasicShapes/Cylinder.Cylinder;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Game/Megascans/Surfaces/Multi-colored_Lines_Fabric_scklezp0/MI_Multi-colored_Lines_Fabric_scklezp0_4K_Inst_Inst_Inst1.MI_Multi-colored_Lines_Fabric_scklezp0_4K_Inst_Inst_Inst1;
@@ -2852,7 +2853,6 @@ RecentlyPlaced=/Game/Group_Assets/Tashan/shirtAndPen/mat_shirt_Inst.mat_shirt_In
 RecentlyPlaced=/Game/Group_Assets/Tashan/shirtAndPen/mat_shirt.mat_shirt;
 RecentlyPlaced=/Game/Group_Assets/Tashan/shirtAndPen/sm_shirt_folded.sm_shirt_folded;
 RecentlyPlaced=/Game/Assets/Tashan/Decals/mm_decal_Inst_Inst.mm_decal_Inst_Inst;
-RecentlyPlaced=/Game/Megascans/Surfaces/Grey_Fabric_sbkjpwp0/MI_Grey_Fabric_sbkjpwp0_4K.MI_Grey_Fabric_sbkjpwp0_4K;
 
 [AssetEditorToolkitTabLocation]
 /Game/Group_Materials/Glass/Glass_Inst.Glass_Inst=1
